<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">
    <LinearLayout
        android:id="@+id/registerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/registerText"
            android:textStyle="bold"
            android:textSize="20dp"
            />
    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/spinerText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/registerText">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.40"
            android:text="@string/availableCourse"
            android:textStyle="bold"
            />
        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.6"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/addCourseHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/spinerText">
        <Button
            android:id="@+id/registerBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/registerCourse"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/addCourseHeading">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.10"
            android:text="@string/image_id"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.30"
            android:text="@string/course_id"
            android:textStyle="bold"
            />
        <TextView

            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.50"
            android:text="@string/course_name"
            android:textStyle="bold"
            />
        <TextView

            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.20"
            android:text="@string/term"
            android:textStyle="bold"
            />
        <!--<TextView

            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.30"
            android:text="@string/prerequsite"
            android:textStyle="bold"
            />-->

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/heading">
        <ListView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
    </LinearLayout>
</RelativeLayout>
