<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">
    <LinearLayout
        android:id="@+id/courseIdText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:text="@string/course_id"/>

        <EditText
            android:id="@+id/courseId"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:layout_weight="0.6"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/courseNameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/courseIdText">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:text="@string/course_name"/>

        <EditText
            android:id="@+id/courseName"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:textAlignment="center" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/termText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/courseNameText">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:text="@string/term" />

        <EditText
            android:id="@+id/term"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:textAlignment="center"
            android:inputType="number"
            android:digits="12"
            android:maxLength="1"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/prerequsiteText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/termText">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:text="@string/prerequsite"/>

        <EditText
            android:id="@+id/prerequsite"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:textAlignment="center" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/addCourseHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/prerequsiteText">
        <Button
            android:id="@+id/addCourseBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/addCourse"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/addCourseHeading"
        android:paddingBottom="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.10"
            android:text="Image"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.30"
            android:text="@string/course_id"
            android:textStyle="bold"
            />
        <TextView

            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.50"
            android:text="@string/course_name"
            android:textStyle="bold"
            />
        <TextView

            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.20"
            android:text="@string/term"
            android:textStyle="bold"
            />
        <!--<TextView

            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.30"
            android:text="@string/prerequsite"
            android:textStyle="bold"
            />-->

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/heading"
        android:id="@+id/list_layout">

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/recycler_view">
        </androidx.recyclerview.widget.RecyclerView>
    </LinearLayout>

</RelativeLayout>
